# Rayleigh_access

./: AUTHORS  CHANGES  INSTALL  Makefile.in  Makefile_reference  README.md  aclocal.m4  config.status  configure  configure.in
doc/: Rayleigh_link.aux  Rayleigh_link.out  Rayleigh_link.tex  Rayleigh_link.toc
doc/tex_src/: gpl3.tex  install_Rayleigh_link.tex
src/: MPI_read_rayleigh_restart.f90  Makefile  Makefile.depends  calypso_mpi_4_rayleigh.f90  main_pickup_rayleigh_spectr.f90  rayleigh_restart_IO.f90  t_control_array_integer2.f90  t_ctl_pick_rayleigh_spectr.f90  t_rayleigh_restart_IO.f90  t_read_control_elements.f90
tests/: Makefile  control_pick_rayleigh
tests/Checkpoints/: checkpoint_log
tests/Checkpoints/00000200/: P  PAB  T  TAB  W  WAB  Z  ZAB  boundary_conditions  equation_coefficients  grid_etc  main_input
tests/Checkpoints/00000400/: P  PAB  T  TAB  W  WAB  Z  ZAB  boundary_conditions  grid_etc  main_input
